Day-09-Ingress/multi-host-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: praveens-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nginx.praveens.online
    - httpd.praveens.online
    - cycle.praveens.online
    - netflix.praveens.online
    secretName: praveens-tls  # Single TLS secret for all domains

  rules:
  - host: nginx.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: httpd.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 80

  - host: cycle.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cycle
            port:
              number: 80

  - host: netflix.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: net
            port:
              number: 80
