Day-09-Ingress/ssl-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: praveens-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.praveens.online
    secretName: praveens-online-tls
  rules:
  - host: www.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
